<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:elevation="4dp"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_money_card" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_time_card" />

        <TextView
            android:id="@+id/tvSavings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_saves" />

        <TextView
            android:id="@+id/tvSpending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_expenses" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
