<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Contadores -->
    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_money"
                android:textSize="14sp"
                android:textColor="#666666"/>

            <TextView
                android:id="@+id/tvSavedMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 €"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRemainingMoney"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_money"
                android:textSize="14sp"
                android:textColor="#666666"/>

            <TextView
                android:id="@+id/tvRemainingMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 €"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_time"
                android:textSize="14sp"
                android:textColor="#666666"/>

            <TextView
                android:id="@+id/tvSavedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 horas"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        android:layout_marginVertical="16dp"/>

    <TextView
        android:id="@+id/tvProductsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_products"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/productsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>


</LinearLayout>
